# libb-cmd

./: README.md  pyproject.toml
src/cmdline/: __init__.py  cmdline.py  example.py
tests/: config.py  test_cmdline.py
